hphp/hack/test/typecheck/errors/4338-class_constant_value_does_not_match_hint.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

class foo {
  const int x = "nope";
}
